Criado o roundsummary. Necessário perceber como chamamos as rondas na view

--- a/SetepassosPRJ/Views/Home/Index.cshtml
+++ b/SetepassosPRJ/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <p>O objetivo do jogo é conseguir passar 7 salas com o máximo de pontos, para isso tens de encontrar uma chave que permitirá sair da 7ª sala.</p>
         </div>
         <div class='column'>
-            <a asp-controller="Jogo" asp-action="CriarJogo"><img src="~/images/btns/btn-iniciar1.png" class="BotaoIniciar" /></a>
+            <a asp-controller="Jogo" asp-action="CriarJogo"><img src="~/images/btns/btn-iniciar1.png" class="botaoIniciar" /></a>
         </div>
         <div class='column'>
             <h1>Hi-Scores Top 3</h1>
