--- a/SetepassosPRJ/Views/Home/InstrucoesBonus.cshtml
+++ b/SetepassosPRJ/Views/Home/InstrucoesBonus.cshtml
@@ -5,36 +5,36 @@
 <div class="row tabelaBonus">
     <div class="col-sm-6 text-center">
         <h2>Conquistas</h2>
-        <p class="MensagemBonus">
+        <p class="mensagemBonus">
             <img src="~/images/Icons/icon-key.png" class="iconsItemsBonus" /> Indica se apanhaste a chave ou não.
         </p>
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-bonus-ouro.png" class="iconsItemsBonus" /> Total de Donuts apanhados</p>
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-enemy.png" class="iconsItemsBonus" /> Nº de monstros derrotados</p>
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-bonus-surpresa.png" class="iconsItemsBonus" /> Nº de items surpresa apanhados</p>
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-pocaoVida.png" class="iconsItemsBonus" /> Nº de poções de vida que transportas</p>
-        <p class="MensagemBonus">Fugas: Nº de vezes que fugiste</p>
-        <p class="MensagemBonus">Áreas Examinadas: Nº de salas examinadas</p>
-        <p class="MensagemBonus">Ataques: Nº de vezes que atacaste</p>
-        <p class="MensagemBonus">Movimentos: Nº de vezes que te moveste (Avançar, Recuar, Fugir)</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-bonus-ouro.png" class="iconsItemsBonus" /> Total de Donuts apanhados</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-enemy.png" class="iconsItemsBonus" /> Nº de monstros derrotados</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-bonus-surpresa.png" class="iconsItemsBonus" /> Nº de items surpresa apanhados</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-pocaoVida.png" class="iconsItemsBonus" /> Nº de poções de vida que transportas</p>
+        <p class="mensagemBonus">Fugas: Nº de vezes que fugiste</p>
+        <p class="mensagemBonus">Áreas Examinadas: Nº de salas examinadas</p>
+        <p class="mensagemBonus">Ataques: Nº de vezes que atacaste</p>
+        <p class="mensagemBonus">Movimentos: Nº de vezes que te moveste (Avançar, Recuar, Fugir)</p>
     </div>
 
     <div class="col-sm-6 text-center">
         <h2>Bónus</h2>
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-key.png" class="iconsItemsBonus" /> Chave x 1000 Donuts</p>
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-enemy.png" class="iconsItemsBonus" /> Inimigos derrotados x 300 Donuts</p>
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-bonus-surpresa.png" class="iconsItemsBonus" />Itens encontrados x 100 Donuts</p>
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-pocaoVida.png" class="iconsItemsBonus" />Poções transportada x 750 Donuts</p>
-        <p class="MensagemBonus">Ganhar o Jogo + 3000 Donuts<p>
-        <p class="MensagemBonus">Ganhar sem Recuar + 400 Donuts</p>
-        <p class="MensagemBonus">Ganhar sem Lutar + 800 Donuts</p>
-        <p class="MensagemBonus">Ganhar com vida inferior a 0.5 + 999 Donuts</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-key.png" class="iconsItemsBonus" /> Chave x 1000 Donuts</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-enemy.png" class="iconsItemsBonus" /> Inimigos derrotados x 300 Donuts</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-bonus-surpresa.png" class="iconsItemsBonus" />Itens encontrados x 100 Donuts</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-pocaoVida.png" class="iconsItemsBonus" />Poções transportada x 750 Donuts</p>
+        <p class="mensagemBonus">Ganhar o Jogo + 3000 Donuts<p>
+        <p class="mensagemBonus">Ganhar sem Recuar + 400 Donuts</p>
+        <p class="mensagemBonus">Ganhar sem Lutar + 800 Donuts</p>
+        <p class="mensagemBonus">Ganhar com vida inferior a 0.5 + 999 Donuts</p>
         <br />
-        <p class="MensagemAccaoMonstro">Bonus Total: Total de Bonus em Donuts</p>
+        <p class="mensagemAccaoMonstro">Bonus Total: Total de Bonus em Donuts</p>
     </div>
 </div>
 <div class="row tabelaBonus">
     <div class="col-sm-12">
-        <p class="MensagemBonus"><img src="~/images/Icons/icon-moeda.png" class="iconsItemBonusMoeda" /><strong>Total Donuts:</strong>Soma dos Donuts (Pontos) totais da ronda</p>
+        <p class="mensagemBonus"><img src="~/images/Icons/icon-moeda.png" class="iconsItemBonusMoeda" /><strong>Total Donuts:</strong>Soma dos Donuts (Pontos) totais da ronda</p>
     </div>
 </div>
 <br/>
