--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -14,21 +14,21 @@
 
     <div class="form-group">
         <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
-        <label class="ArrangeChars">
+        <label class="arrangeChars">
             <input class="form-control" type="radio" asp-for="PerfilTipo" value="W" checked>Nerd
         </label>
         <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
-        <label class="ArrangeChars">
+        <label class="arrangeChars">
             <input class="form-control" type="radio" asp-for="PerfilTipo" value="B">Gordo
         </label>
         <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
-        <label class="ArrangeChars">
+        <label class="arrangeChars">
             <input class="form-control" type="radio" asp-for="PerfilTipo" value="S">velha louca
         </label>
     </div>
-    <div class="rowBottun">
-            <input type="image" src="~/images/btns/btn-jogar.png" value="CriarJogo" class="BotaoJogar" />
-              <a asp-action="CriarJogoAutonomo" class="BotaoModo"><img src="~/images/btns/btn-autonomo.png" /></a>
+    <div class="rowButton">
+            <input type="image" src="~/images/btns/btn-jogar.png" value="CriarJogo" class="botaoJogar" />
+              <a asp-action="CriarJogoAutonomo" class="botaoModo"><img src="~/images/btns/btn-autonomo.png" /></a>
     </div>
 </form>
 
