Alterado tamanho da tabela de hiscores e fundo

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -10,7 +10,7 @@
 else
 {
     int rank = 1;
-    <div class="text-center">
+    <div class="text-center font-medium">
         <table id="tabela" class="table table-condensed">
             <thead>
                 <tr>
