--- a/SetepassosPRJ/Views/Jogo/DadosJogoAutonomo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/DadosJogoAutonomo.cshtml
@@ -1,20 +1,17 @@
-﻿@model List<RoundSummary>
-{
-    ViewData["Title"] = "Round Summary";
-}
+﻿@model RondaFinal
 
-@if (Model.Count == 0)
+@if (Model.rsList.Count == 0)
 {
     <h2>Não existem jogos registados.</h2>
 }
 else
 {
-    int numRondas = Model.Count;
+    int numRondas = Model.rsList.Count;
     <div class="text-center">
         <table id="tabela" class="table table-condensed">
             <thead>
                 <tr>
-                    Summario das Rondas
+                    Summario das Rondas (GameID: @Model.GameID)
                     <th class="text-center" scope="col">Nº da Ronda</th>
                     <th class="text-center" scope="col">Decisão Tomada</th>
                     <th class="text-center" scope="col">Sala</th>
@@ -30,15 +27,17 @@ else
                 </tr>
             </thead>
             <tbody>
+                @foreach (RoundSummary r in Model.rsList)
+                {
                     <tr>
-                        <td>@Model.LastOrDefault().NumeroRonda</td>
-                        <td>@Model.LastOrDefault().DecisaoTomada</td>
-                        <td>@Model.LastOrDefault().Posicao</td>
-                        <td>@Model.LastOrDefault().NumInimigosDerrotados</td>
-                        <td>@Model.LastOrDefault().NumFugas </td>
-                        <td>@Model.LastOrDefault().NumItensEncontrados</td>
+                        <td>@r.NumeroRonda</td>
+                        <td>@r.DecisaoTomada</td>
+                        <td>@r.Posicao</td>
+                        <td>@r.NumInimigosDerrotados</td>
+                        <td>@r.NumFugas </td>
+                        <td>@r.NumItensEncontrados</td>
                         <td>
-                            @if (Model.LastOrDefault().Chave)
+                            @if (r.Chave)
                             {
                                 @:Sim
                             }
@@ -47,11 +46,11 @@ else
                                 @:Não
                             }
                         </td>
-                        <td>@Model.LastOrDefault().MoedasOuro</td>
-                        <td> @Model.LastOrDefault().PontosVida</td>
-                        <td>@Model.LastOrDefault().PontosAtaque</td>
-                        <td>@Model.LastOrDefault().PontosSorte</td>
-                        <td>@Model.LastOrDefault().PocoesVida</td>
+                        <td>@r.MoedasOuro</td>
+                        <td> @r.PontosVida</td>
+                        <td>@r.PontosAtaque</td>
+                        <td>@r.PontosSorte</td>
+                        <td>@r.PocoesVida</td>
                     </tr>
                 }
             </tbody>
@@ -59,8 +58,8 @@ else
         <table id="tabela" class="table table-condensed">
             <thead>
                 <tr>
-                    Final do jogo
-                    <th class="text-center" scope="col">Nº da Ronda</th>
+                    Final do jogo (GameID: @Model.GameID)
+                    <th class="text-center" scope="col">Nº de Rondas</th>
                     <th class="text-center" scope="col">Pontuação Final</th>
                     <th class="text-center" scope="col">Resultado Final</th>
                     <th class="text-center" scope="col">Chave Encontrada?</th>
@@ -75,25 +74,26 @@ else
                 </tr>
             </thead>
             <tbody>
-                @foreach (RoundSummary r in Model)
-                {
+
                     <tr>
                         <td>@numRondas</td>
-                        <td>@r.MoedasOuroTotal</td>
-                        @if (r.ResultadoJogo == ResultadoJogo.Vitoria)
+                        <td>@Model.MoedasOuroTotal</td>
+                        <td>
+                        @if (Model.ResultadoJogo == ResultadoJogo.Vitoria)
                         {
                             @:Vitoria
                         }
-                        else if (r.ResultadoJogo == ResultadoJogo.Derrota)
+                        else if (Model.ResultadoJogo == ResultadoJogo.Derrota)
                         {
                             @:Derrota
                         }
-                        @if (r.ResultadoJogo == ResultadoJogo.Desistiu)
+                        @if (Model.ResultadoJogo == ResultadoJogo.Desistiu)
                         {
                             @:Desistiu
                         }
+                        </td>
                         <td>
-                            @if (r.Chave)
+                            @if (Model.Chave)
                             {
                                 @:Sim
                             }
@@ -101,16 +101,15 @@ else
                             {
                                 @:Não
                             }
-                        <td>@(r.TotalMover - r.NumFugas)</td>
-                        <td>@r.PocoesUsadas</td>
-                        <td> @r.TotalAtaques </td>
-                        <td>@r.NumFugas</td>
-                        <td>@r.NumInimigosDerrotados</td>
-                        <td> @r.NumItensEncontrados</td>
-                        <td>@r.TotalAreasExaminadas</td>
-                        <td>@r.PercentagemAreasInvestigadas</td>
+                        <td>@(Model.TotalMover - Model.NumFugas)</td>
+                        <td>@Model.PocoesUsadas</td>
+                        <td>@Model.TotalAtaques</td>
+                        <td>@Model.NumFugas</td>
+                        <td>@Model.NumInimigosDerrotados</td>
+                        <td> @Model.NumItensEncontrados</td>
+                        <td>@Model.TotalAreasExaminadas</td>
+                        <td>@Model.PercentagemAreasInvestigadas</td>
                     </tr>
-                }
             </tbody>
         </table>
     </div>
