Melhorada estratégia de jogo. Retirado repositorio de rondas

--- a/SetepassosPRJ/Views/Jogo/DadosJogoAutonomo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/DadosJogoAutonomo.cshtml
@@ -59,18 +59,18 @@ else
             <thead>
                 <tr>
                     Final do jogo (GameID: @Model.GameID)
-                    <th class="text-center" scope="col">Nº de Rondas</th>
-                    <th class="text-center" scope="col">Pontuação Final</th>
-                    <th class="text-center" scope="col">Resultado Final</th>
-                    <th class="text-center" scope="col">Chave Encontrada?</th>
+                    <th class="text-center" scope="col">Nº Rondas</th>
+                    <th class="text-center" scope="col">Score Final</th>
+                    <th class="text-center" scope="col">Resultado</th>
+                    <th class="text-center" scope="col">Chave?</th>
                     <th class="text-center" scope="col">Passos Frente/Trás</th>
                     <th class="text-center" scope="col">Poções Usadas</th>
                     <th class="text-center" scope="col">Ataques</th>
                     <th class="text-center" scope="col">Fugas</th>
                     <th class="text-center" scope="col">Monstros Derrotados</th>
                     <th class="text-center" scope="col">Itens Encontrados</th>
-                    <th class="text-center" scope="col">Áreas Investigadas</th>
-                    <th class="text-center" scope="col">% Áreas Examinadas</th>
+                    <th class="text-center" scope="col">Áreas Examinadas</th>
+                    <th class="text-center" scope="col">% Áreas</th>
                 </tr>
             </thead>
             <tbody>
@@ -106,7 +106,7 @@ else
                         <td>@Model.TotalAtaques</td>
                         <td>@Model.NumFugas</td>
                         <td>@Model.NumInimigosDerrotados</td>
-                        <td> @Model.NumItensEncontrados</td>
+                        <td>@Model.NumItensEncontrados</td>
                         <td>@Model.TotalAreasExaminadas</td>
                         <td>@Model.PercentagemAreasInvestigadas</td>
                     </tr>
