Alterada pagina de dados do jogo autonomo Alterada pagina de criar jogo, letras tavam muito pequenas.

--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -15,15 +15,18 @@
     <div class="form-group">
         <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
         <label class="arrangeChars">
-            <input class="form-control" type="radio" asp-for="PerfilTipo" value="W" checked>Nerd
+            <input class="form-control" type="radio" asp-for="PerfilTipo" value="W" checked>
+            <p class="font-large">Nerd</p>
         </label>
         <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
         <label class="arrangeChars">
-            <input class="form-control" type="radio" asp-for="PerfilTipo" value="B">Gordo
+            <input class="form-control" type="radio" asp-for="PerfilTipo" value="B">
+            <p class="font-large">Gordo</p>
         </label>
         <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
         <label class="arrangeChars">
-            <input class="form-control" type="radio" asp-for="PerfilTipo" value="S">velha louca
+            <input class="form-control" type="radio" asp-for="PerfilTipo" value="S">
+            <p class="font-large">Velha Louca</p>
         </label>
     </div>
     <div class="rowButton">
