--- a/SetepassosPRJ/Views/Jogo/CriarJogoAutonomo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogoAutonomo.cshtml
@@ -9,13 +9,13 @@
     <div class="form-group text-center">
         <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
         <label class="arrangeChars">
-            <input class="form-control" type="radio" asp-for="Nome" value="auto3" checked>Auto 3
+            <input class="form-control" type="radio" asp-for="Nome" value="auto3" checked><p class="font-large">Auto 3</p>
         </label>
         <label class="arrangeChars">
-            <input class="form-control" type="radio" asp-for="Nome" value="auto7">Auto 7
+            <input class="form-control" type="radio" asp-for="Nome" value="auto7"><p class="font-large">Auto 7</p>
         </label>
         <label class="arrangeChars">
-            <input class="form-control" type="radio" asp-for="Nome" value="auto0">Auto 0
+            <input class="form-control" type="radio" asp-for="Nome" value="auto0"><p class="font-large">Auto 0</p>
         </label>
     </div>
     <div class="explicacaoAutonomo">
